Fix bug where images overflow columns

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1662,7 +1662,6 @@ input, select, textarea {
 
 			.image.centered img {
 				margin: 0 auto;
-				width: auto;
 			}
 
 		.image.featured {
